gitops/deployments/dev/loderunner.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ngsa-l8r
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: l8r
  namespace: ngsa-l8r
  annotations:
    fluxcd.io/automated: "true"
    filter.fluxcd.io/app: glob:beta-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: l8r
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: l8r
    spec:
      containers:
      - name: app
        image: ghcr.io/retaildevcrews/ngsa-lr:beta-0.3.0-0331-0606-40
        imagePullPolicy: Always
        args:
        - -l
        - "1000"
        - -r
        - -s
        - http://ngsa-memory.ngsa:8080
        - http://ngsa-cosmos.ngsa:8080
        - -f
        - benchmark.json
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 256Mi
            cpu: 250m
